split project to gradle submodules & add native image build task