@@ -1,55 +1,21 @@
-plugins {
-    id 'java'
-    id 'antlr'
-    id 'application'
-}
+subprojects {
+    apply plugin: 'java'
 
-
-repositories {
-    mavenCentral()
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
-}
-
-// These arguments are required because of the JVM 11's module system -
-// we grant this module access to the packages from the Truffle API JAR
-test {
-    useJUnitPlatform()
-
-    jvmArgs '-ea',
-            '--add-exports',
-                'org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED',
-            '--add-exports',
-                'org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED',
-            '--add-exports',
-                'org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED'
-
-    testLogging {
-        events 'failed'
-        exceptionFormat 'full'
+    repositories {
+        mavenCentral()
     }
-}
 
-ext {
-    graal_version = '22.3.0'
-    antlr_version = '4.9.2'
-}
+    java {
+        sourceCompatibility = JavaVersion.VERSION_23
+        targetCompatibility = JavaVersion.VERSION_23
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(23)
+            vendor = JvmVendorSpec.matching("GraalVM Community")
+        }
+    }
 
-dependencies {
-    antlr "org.antlr:antlr4:$antlr_version"
-
-    implementation "org.graalvm.truffle:truffle-api:$graal_version"
-    annotationProcessor "org.graalvm.truffle:truffle-dsl-processor:$graal_version"
-
-    testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
-}
-
-application {
-    mainClass = 'khaser.lama.LamaMain'
-    applicationDefaultJvmArgs = [
-        '-Dgraalvm.locatorDisabled=true',
-    ]
+    ext {
+        graal_version = '24.1.0'
+        antlr_version = '4.9.2'
+    }
 }
